# c-cpp

./: .travis.yml  CMakeLists.txt  README.md
include/Algorithm/: Hash.h  MixedInt.h  README.md
include/Common/: CompilerMessage.h  FileSystem.h
include/DataStructure/: DynamicIdxList.h  IdxListBase.h  StaticIdxList.h  finite_state_machine.h  lock_free_array.h
include/DesignPattern/: Noncopyable.h  Singleton.h
include/Lock/: LockHolder.h  SpinLock.h
include/Log/: LogHandlerFilesystem.h  LogWrapper.h  LuaLogAdaptor.h
include/Logic/: AttributeManager.h  AttributeManager.h.php  formular_base.h  formular_mc.h
include/MemPool/: IdxMemType.h  IdxMemTypeKV.h  IdxShmMemType.h  IdxShmMemTypeKV.h  STDAllocatorBase.h  StaticAllocator.h  StaticShmAllocator.h  lru_object_pool.h
include/Random/: RandomGenerator.h  RandomMTCore.h  RandomXorCombineCore.h
include/Socket/: CompatSocket.h
include/String/: StringCommon.h  TQueryString.h  ac_automation.h
include/log/: LogHandlerFilesystem.h  LogWrapper.h
include/std/: README.md  functional.h  ref.h  smart_ptr.h  static_assert.h  thread.h
project/cmake/: CompilerOption.cmake  (+2 more)
sample/: CMakeLists.txt  Sample.cpp
test/: CMakeLists.txt
test/case/: ACAutomationTest.cpp  AttributeManagerTest.cpp  DynamicIdxListTest.cpp  ForeachTest.cpp  LRUObjectPoolTest.cpp  LockTest.cpp  StaticIdxListTest.cpp
test/frame/: shell_font.cpp  test_macros.h  test_manager.cpp
test/src/: AttributeManagerTest.cpp  DynamicIdxListTest.cpp  ForeachTest.cpp  Main.cpp  MixedIntTest.cpp  RandomTest.cpp  SingletonTest.cpp  StaticIdxListTest.cpp
(+10 files in other folders)
